# sealpir-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
benches/: pir.rs
sealpir-bindings/: pir_rust.cpp  pir_rust.hpp
src/: client.rs  lib.rs  server.rs
tests/: pir.rs
