[package]
name = "sealpir"
version = "0.1.1"
authors = ["Sebastian Angel <sga001@cis.upenn.edu>"]
edition = "2021"

[build-dependencies]
cc = "1.0"
cmake = "0.1.49"

[dependencies]
libc = "0.2.139"
rand = "0.8.5"
serde = "1.0.70"
serde_derive = "1.0.70"

[dev-dependencies]
criterion = "0.2.4"
serde_bytes = "0.10.4"

[[bench]]
name = "pir"
harness = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = true
codegen-units = 1
panic = 'unwind'
